Resolved merge conflicts